--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
- 
   "scripts": {
-    "start":"nodemon app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -25,7 +24,7 @@
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
-    "validator": "^13.12.0",
-    "ws": "^8.18.0"
+    "socket.io": "^4.8.1",
+    "validator": "^13.12.0"
   }
 }
